Fix clipping issues

--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -25,10 +25,3 @@ figure.interactive-atom {
 .pillar-link {
     font-weight: 700;
 }
-
-// shows footer
-.l-footer {
-    position: relative;
-    z-index: 20;
-    display: block !important;
-}
